# app/routes/__init__.py
@@ -1,5 +1,5 @@
 from flask_restful import Api
-from app.controllers import (IndexView, AppsView)
+from app.controllers import (IndexView, AppsView, ExperimentRunsView, ExperimentView, RunView)
 
 api = Api()
 
@@ -8,3 +8,7 @@ api.add_resource(IndexView, '/')
 
 # Apps route
 api.add_resource(AppsView, '/apps')
+
+api.add_resource(ExperimentView, '/experiments/<experiment_id>')
+api.add_resource(ExperimentRunsView, '/experiments/<experiment_id>/runs')
+api.add_resource(RunView, '/run/<run_id>')
